--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
 	<title>Slider</title>
 </head>
 <body>
+	<div class="slider">
+		<input type="radio" name="slide_switch" id="id1"/>
+		<label for="id1">
+			<img src="" width="100">
+		</label>
+		<img src="">
 
+		<input type="radio" name="slide_switch" id="id2" checked="checked"/>
+		<label for="id2">
+			<img src="" width="100">
+		</label>
+		<img src="">
+
+		<input type="radio" name="slide_switch" id="id3"/>
+		<label for="id3">
+			<img src="" width="100">
+		</label>
+		<img src="">
+
+		<input type="radio" name="slide_switch" id="id4"/>
+		<label for="id4">
+			<img src="" width="100">
+		</label>
+		<img src="">
+	</div>
 </body>
 </html>
