added images and custom js file

--- a/index.html
+++ b/index.html
@@ -7,27 +7,28 @@
 	<div class="slider">
 		<input type="radio" name="slide_switch" id="id1"/>
 		<label for="id1">
-			<img src="" width="100">
+			<img src="dist/images/1.jpg" width="100">
 		</label>
-		<img src="">
+		<img src="dist/images/1.jpg">
 
 		<input type="radio" name="slide_switch" id="id2" checked="checked"/>
 		<label for="id2">
-			<img src="" width="100">
+			<img src="dist/images/2.jpg" width="100">
 		</label>
-		<img src="">
+		<img src="dist/images/2.jpg">
 
 		<input type="radio" name="slide_switch" id="id3"/>
 		<label for="id3">
-			<img src="" width="100">
+			<img src="dist/images/3.png" width="100">
 		</label>
-		<img src="">
+		<img src="dist/images/3.png">
 
 		<input type="radio" name="slide_switch" id="id4"/>
 		<label for="id4">
-			<img src="" width="100">
+			<img src="dist/images/4.jpg" width="100">
 		</label>
-		<img src="">
+		<img src="dist/images/4.jpg">
 	</div>
+	<script type="text/javascript" src="dist/js/custom.js"></script>
 </body>
 </html>
