--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Slider</title>
+	<link rel="stylesheet" type="text/css" href="dist/css/stylesheet.css">
 </head>
 <body>
 	<div class="slider">
@@ -19,15 +20,21 @@
 
 		<input type="radio" name="slide_switch" id="id3"/>
 		<label for="id3">
-			<img src="dist/images/3.png" width="100">
-		</label>
-		<img src="dist/images/3.png">
-
-		<input type="radio" name="slide_switch" id="id4"/>
-		<label for="id4">
 			<img src="dist/images/4.jpg" width="100">
 		</label>
 		<img src="dist/images/4.jpg">
+
+		<input type="radio" name="slide_switch" id="id4"/>
+		<label for="id4">
+			<img src="dist/images/5.jpg" width="100">
+		</label>
+		<img src="dist/images/5.jpg">
+
+		<input type="radio" name="slide_switch" id="id5"/>
+		<label for="id5">
+			<img src="dist/images/6.jpg" width="100">
+		</label>
+		<img src="dist/images/6.jpg">
 	</div>
 	<script type="text/javascript" src="dist/js/custom.js"></script>
 </body>
